test/analysis/flowanalysis/rec_obj-3.good
rec_obj-3.chpl:1: error: unable to determine type of field from nil
